kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noteapp-ingress
  annotations:
spec:
  rules:
  - host: note.app
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: vue
            port:
              number: 8080
      - pathType: Prefix
        path: /v1/notes/
        backend:
          service:
            name: flask
            port:
              number: 5000
      - pathType: Prefix
        path: /home/
        backend:
          service:
            name: flask
            port:
              number: 5000
